fix: adjust Dockerfile with javaagent